Add Complete stage

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -12,4 +12,9 @@ pipeline {
             }
         }
     }
+    stage('Complete') {
+        steps {
+            echo 'Job Complite!'
+        }
+    }
 }
