--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -16,5 +16,12 @@ pipeline {
                 echo 'Job Complite!'
            }
         }
+        stage('Deliver') {
+            steps {
+                sh './scripts/deliver.sh'
+                input message: 'Finished using the web site? (Click "Proceed" to continue)'
+                sh './scripts/kill.sh'
+            }
+        }
     }
 }
