--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -8,20 +8,15 @@ pipeline {
     stages {
         stage('Build') { 
             steps {
-                sh 'npm install' 
+                dir('frontend') {
+                    sh 'npm install'
+                }
             }
         }
         stage('Complete') {
             steps {
                 echo 'Job Complite!'
            }
-        }
-        stage('Deliver') {
-            steps {
-                sh './scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                sh './scripts/kill.sh'
-            }
         }
     }
 }
