--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                 }
             }
         }        
-        stage('Build') { 
+        stage('Test') { 
             steps {
                 dir('frontend') {
                     sh 'npm test'
