--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node
+FROM node:20.11.0-alpine3.19
 
 WORKDIR /app
 
@@ -10,5 +10,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
-
+CMD [ "npm", "start" ]
