--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^3.0.1",
+    "web-vitals": "^2.1.4",
+    "ajv": "^7.0.0",
+    "ajv-keywords": "^4.0.0",
+    "schema-utils": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
